Bug 96461 - Video artifacts with FBC enabled on HSW using GNOME
Summary: Video artifacts with FBC enabled on HSW using GNOME
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Paulo Zanoni
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-09 15:28 UTC by Lyude Paul
Modified: 2017-07-24 22:41 UTC (History)
2 users (show)

See Also:
i915 platform: HSW
i915 features: display/FBC


Attachments
FBC test suite results (24.41 KB, text/plain)
2016-06-09 15:28 UTC, Lyude Paul
no flags Details

Description Lyude Paul 2016-06-09 15:28:48 UTC
Created attachment 124421 [details]
FBC test suite results

This was kind of a difficult bug to track down. If you're using a Haswell system running GNOME and you have fbc completely enabled and working, playing videos can result in video artifacts. Steps to reproduce:

- Run GNOME
- Ensure FBC is enabled and active
- Download a movie, I used the ogg version of Big Buck Bunny for this
- Run `gst-launch-1.0 filesrc location='some_movie.ogg' ! decodebin ! glimagesink` in a terminal
- Watch for about over a minute, you'll see small horizontal lines go down the screen.

Interestingly enough, there's three things that make this bug go away:
- Turning off FBC through `i915.enable_fbc=0`
- Using something other then GNOME
- Using the modesetting DDX

Seen on a ThinkPad T440s
Comment 1 Paulo Zanoni 2016-06-09 19:08:50 UTC
Does the problem still happen if you apply the following patches?

 - https://patchwork.freedesktop.org/patch/79567/
 - https://patchwork.freedesktop.org/patch/80857/
 - https://patchwork.freedesktop.org/patch/92634/

Thanks,
Paulo
Comment 2 Paulo Zanoni 2016-06-20 21:29:52 UTC
(In reply to Paulo Zanoni from comment #1)
> Does the problem still happen if you apply the following patches?
> 
>  - https://patchwork.freedesktop.org/patch/79567/
>  - https://patchwork.freedesktop.org/patch/80857/
>  - https://patchwork.freedesktop.org/patch/92634/
> 
> Thanks,
> Paulo

These patches were merged and your patch to disable FBC by default was also merged, so in theory we can close this bug. But it would be really good to know whether these patches make FBC work again on HSW, so can you please test drm-intel-nightly with i915.enable_fbc=1 and confirm whether it works?

Thanks,
Paulo
Comment 3 Paulo Zanoni 2016-10-28 11:54:08 UTC
(In reply to Paulo Zanoni from comment #2)
> (In reply to Paulo Zanoni from comment #1)
> > Does the problem still happen if you apply the following patches?
> > 
> >  - https://patchwork.freedesktop.org/patch/79567/
> >  - https://patchwork.freedesktop.org/patch/80857/
> >  - https://patchwork.freedesktop.org/patch/92634/
> > 
> > Thanks,
> > Paulo
> 
> These patches were merged and your patch to disable FBC by default was also
> merged, so in theory we can close this bug. But it would be really good to
> know whether these patches make FBC work again on HSW, so can you please
> test drm-intel-nightly with i915.enable_fbc=1 and confirm whether it works?

Ping?
Comment 4 Lyude Paul 2016-10-31 16:48:27 UTC
(In reply to Paulo Zanoni from comment #3)
> (In reply to Paulo Zanoni from comment #2)
> > (In reply to Paulo Zanoni from comment #1)
> > > Does the problem still happen if you apply the following patches?
> > > 
> > >  - https://patchwork.freedesktop.org/patch/79567/
> > >  - https://patchwork.freedesktop.org/patch/80857/
> > >  - https://patchwork.freedesktop.org/patch/92634/
> > > 
> > > Thanks,
> > > Paulo
> > 
> > These patches were merged and your patch to disable FBC by default was also
> > merged, so in theory we can close this bug. But it would be really good to
> > know whether these patches make FBC work again on HSW, so can you please
> > test drm-intel-nightly with i915.enable_fbc=1 and confirm whether it works?
> 
> Ping?

Oops, didn't realize this was waiting on me…
I can't test this today since I don't have a hsw system readily available at the moment, but I'll make sure to check whether this makes a difference or not when i get into the office on thursday.
Comment 5 Paulo Zanoni 2016-12-23 11:23:40 UTC
(In reply to Lyude Paul from comment #4)
> (In reply to Paulo Zanoni from comment #3)
> > (In reply to Paulo Zanoni from comment #2)
> > > (In reply to Paulo Zanoni from comment #1)
> > > > Does the problem still happen if you apply the following patches?
> > > > 
> > > >  - https://patchwork.freedesktop.org/patch/79567/
> > > >  - https://patchwork.freedesktop.org/patch/80857/
> > > >  - https://patchwork.freedesktop.org/patch/92634/
> > > > 
> > > > Thanks,
> > > > Paulo
> > > 
> > > These patches were merged and your patch to disable FBC by default was also
> > > merged, so in theory we can close this bug. But it would be really good to
> > > know whether these patches make FBC work again on HSW, so can you please
> > > test drm-intel-nightly with i915.enable_fbc=1 and confirm whether it works?
> > 
> > Ping?
> 
> Oops, didn't realize this was waiting on me…
> I can't test this today since I don't have a hsw system readily available at
> the moment, but I'll make sure to check whether this makes a difference or
> not when i get into the office on thursday.

I got this confirmation on IRC:

Nov 03 17:06:51 <Lyude>	pzanoni: as well: the original testcase I had that was showing that weird tearing with FBC enabled on hsw doesn't do it anymore on nightly :)
Nov 03 17:08:29 <pzanoni>	Lyude: nice, thanks! Maybe we could try reenabling FBC on HSW now...
Nov 03 17:08:44 <Lyude>	sounds fine by me

I'm going to close the bug since FBC has been disabled on HSW since a long time ago. I just wanted the confirmation that we can try to enable it again in the newest tree now.

(just documenting things for future reference)

Thanks for all the help!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.