drivers/gpu/drm/drm_os_config.h
@@ -1,9 +1,9 @@
 #ifndef DRM_OS_CONFIG_H_
 #define DRM_OS_CONFIG_H_ 
 
-#define CONFIG_DEBUG_FS
-#ifdef notyet
-#define CONFIG_COMPAT COMPAT_FREEBSD32
+#define CONFIG_DEBUG_FS 1
+#ifdef COMPAT_FREEBSD32
+#define CONFIG_COMPAT 1
 #endif
 #ifdef notyet
 #define CONFIG_MMU_NOTIFIER 1
@@ -20,9 +20,9 @@
 #endif
 
 #if defined(__i386__) || defined(__amd64__)
-#define CONFIG_PCI
-#define	CONFIG_ACPI
-#define	CONFIG_DRM_I915_KMS
+#define CONFIG_PCI 1
+#define	CONFIG_ACPI 1 
+#define	CONFIG_DRM_I915_KMS 1
 #undef	CONFIG_INTEL_IOMMU
 #endif
 
@@ -37,12 +37,13 @@
 
 #undef	CONFIG_VGA_CONSOLE
 
-#define CONFIG_BACKLIGHT_CLASS_DEVICE
-#define CONFIG_DRM_I915_PRELIMINARY_HW_SUPPORT
+#define CONFIG_BACKLIGHT_CLASS_DEVICE 1
+#define CONFIG_DRM_I915_PRELIMINARY_HW_SUPPORT 1
 
-#define CONFIG_SMP	
+#define CONFIG_SMP 1
 #define CONFIG_DRM_LOAD_EDID_FIRMWARE 1
 
-#define CONFIG_DRM_AMD_POWERPLAY
+#define CONFIG_DRM_AMD_POWERPLAY 1
+#define CONFIG_PM 1
 
 #endif
