sys/compat/linuxkpi/common/include/linux/acpi.h
@@ -13,8 +13,6 @@
 #include <linux/mod_devicetable.h>
 
 
-
-#define CONFIG_ACPI
 #include <acpi/acpi.h>
 #include <acpi/acpi_bus.h>
 #include <acpi/acpi_drivers.h>
